# autoDMCA

./: .claude_mcp_config.json  .env.example  .eslintrc.js  .gitignore  AI_COST_ANALYSIS.md  AI_ML_STRATEGY.md  API_KEYS_SETUP_GUIDE.md  APPLICATION_SCREENS_LIST.md  BILLING_SYSTEM_OVERVIEW.md  BUSINESS_METRICS_DASHBOARD.md  CLAUDE.md  COMPREHENSIVE_COST_ESTIMATION_REPORT.md  COMPREHENSIVE_COST_ESTIMATION_REPORT_HETZNER.md  COMPREHENSIVE_LAUNCH_STRATEGY.md  COST_SUMMARY.md  CRITICAL_SECURITY_FIXES_REPORT.md  DATA_PIPELINE_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DMCA_TEMPLATES_COMPREHENSIVE_TEST_REPORT.md  DMCA_TEMPLATES_TEST_IMPLEMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_STATUS.md  LANDING_PAGE_DEPLOYMENT_GUIDE.md  LOCAL_TESTING_GUIDE.md  LOGIN_SCREEN_DESIGN_SPECIFICATION.md  PERFORMANCE_COMPLETION_SUMMARY.md  PLATFORM_STATUS.md  PRD.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_VALIDATION.md  README.md  RULTA_CLONE.md  SCANNER_README.md  SECURITY_AUDIT_REPORT.md  SECURITY_RECOMMENDATIONS_CHECKLIST.md  SUBMISSIONS_TEST_SUMMARY.md  TESTING_STRATEGY.md  TEST_IMPLEMENTATION_SUMMARY.md  THIRD_PARTY_API_COST_ANALYSIS.md  (+30 more)
.claude/: settings.local.json
.serena/: project.yml
backend/: .coveragerc  .env.example  DATABASE_FIXES_SUMMARY.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.local  Dockerfile.production  alembic.ini  debug_import.py  performance_requirements.txt  pytest.ini  requirements-fingerprinting.txt  requirements-local.txt  requirements-updated.txt  requirements.txt  start_workers.py  test_db_setup.py
browser-extension/: IMPLEMENTATION_SUMMARY.md  README.md  background.js  build.js  manifest.json  package.json  popup.html  popup.js
database/: README.md  constraints.sql  indexes.sql  optimization_queries.sql  schema.sql  setup.sql
design-review/: .prettierignore  design-ui-review.md
design-specs/: 02-REGISTER_SCREEN_SPECIFICATION.md  03-DASHBOARD_SCREEN_SPECIFICATION.md  04-BLOG_PAGE_SPECIFICATION.md  05-WORKBENCH_SPECIFICATION.md  06-CREATOR_PROFILES_SPECIFICATION.md  07-CONTENT_INFRINGEMENTS_SPECIFICATION.md  08-DMCA_TAKEDOWN_REQUESTS_SPECIFICATION.md  09-CONTENT_SUBMISSIONS_SPECIFICATION.md  10-SOCIAL_MEDIA_PROTECTION_SPECIFICATION.md  11-AI_CONTENT_MATCHING_SPECIFICATION.md  12-DMCA_TEMPLATES_SPECIFICATION.md  13-SEARCH_ENGINE_DELISTING_SPECIFICATION.md  14-BROWSER_EXTENSION_MANAGEMENT_SPECIFICATION.md  15-CONTENT_WATERMARKING_SPECIFICATION.md  16-USER_SETTINGS_SPECIFICATION.md  17-SMART_ONBOARDING_SPECIFICATION.md  18-BILLING_DASHBOARD_SPECIFICATION.md  19-REPORTS_ANALYTICS_SPECIFICATION.md  20-ADMIN_PANEL_SPECIFICATION.md  21-GIFT_SUBSCRIPTION_PURCHASE_SPECIFICATION.md  22-GIFT_REDEMPTION_SPECIFICATION.md  23-ADDON_SERVICES_SPECIFICATION.md  24-404_NOT_FOUND_SPECIFICATION.md  25-PASSWORD_RECOVERY_SPECIFICATION.md  27-ROOT_REDIRECT_SPECIFICATION.md
docs/: DEPLOYMENT_RUNBOOK.md  SECURITY_IMPLEMENTATION_GUIDE.md
examples/: advanced_features.py  basic_usage.py
frontend/: .env.example  .eslintrc.js  Dockerfile  Dockerfile.production  PERFORMANCE_OPTIMIZATION.md  index.html  jest-axe.setup.js  nginx.conf  package-lock.json  package.json  package.test.json  playwright.config.ts  test-submissions.js  vite.config.ts  vitest.config.ts  vitest.templates.config.ts
monitoring/: prometheus.yml
nginx/: nginx.conf
scanning/: __init__.py  config.py  scanner.py
scripts/: init.sql  setup.sh  (+10 more)
(+570 files in other folders)
